--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> My friends are clever </title>
+        <title> {{title}} </title>
             <link rel = 'stylesheet' href = '/css/style.css' />
     </head>
     <body>
-        {{title}}
-        <h1>France is beautiful</h1>
+        
+        <h1>{{caption}}</h1>
         <img src = "images/skimountain.jpg" alt = "Ski mountain">
     </body>
 </html>
