--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,11 +2,10 @@
 <html>
     <head>
         <title> {{title}} </title>
-            <link rel = 'stylesheet' href = '/css/style.css' />
+            <link rel = 'stylesheet' href = 'site/css/style.css' />
     </head>
     <body>
-        
         <h1>{{caption}}</h1>
-        <img src = "images/skimountain.jpg" alt = "Ski mountain">
+        <img src = "site/images/skimountain.jpg" alt = "Ski mountain">
     </body>
 </html>
